# ModelMorph

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
modelmorph/: __init__.py
modelmorph/chatbot/: __init__.py
modelmorph/chatbot/assistant/: .conf  __init__.py  assitant.py  chat.py  chat_assistant.py  promt.py
modelmorph/chatbot/domain/: llm.py
modelmorph/chatbot/plugins/: __init__.py  nlpToSql.py  plugin.py
modelmorph/chatbot/plugins/nlpToSql/: config.json  skprompt.txt
modelmorph/chatbot/repository/: __init__.py  openai_repository.py
modelmorph/db/: __init__.py
modelmorph/db/domain/: __init__.py  cloud_domain.py  db_domain.py
modelmorph/db/repository/: __init__.py  azure_db_repository.py  mongo_db_repository.py  mysql_db_repository.py
modelmorph/docs/: CONTRIBUTING.md  UML.md
modelmorph/docs/dev/: BUILD.md  NEXT.md  README.md
modelmorph/logger/: logger.py
tests/: main_test.py
