[metadata]
name = ModelMorph
version = 0.1.0
author = Esteban Salazar
author_email = estebansalazar498@gmail.com
description = ModelMorph is a powerful library for integrating LLMs in chatbots and AI assistants. It supports dynamic conversations, stores chat histories (e.g., MongoDB), and integrates with OpenAI’s API. Its modular design enables customizable prompts, efficient queries, and smooth deployment in cloud or local environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Butis498/ModelMorph
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    black
    flake8
